@@ -17,7 +17,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 1.05
+Release: 1.06
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -521,10 +521,11 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
-* Tue Sep  3 2002 Jeff Johnson <jbj@redhat.com> 4.1-1.05
+* Tue Sep  3 2002 Jeff Johnson <jbj@redhat.com> 4.1-1.06
 - fix: always do rpmalMakeIndex.
 - fix: resurrect --triggers (#73330).
 - python: typo in NOKEY exception string.
+- fix: parse pgp packets more carefully.
 
 * Sat Aug 31 2002 Jeff Johnson <jbj@redhat.com> 4.1-1.04
 - fix: SIGCHLD reaper race (#73134).
